# instcov-1

./: .gitignore  CMakeLists.txt  LICENSE.TXT  README  README.md  dist.sh  dist_encrypt.sh  dist_win.bat  dist_win_x64.bat  dist_win_x86.bat  index.html  params.json  set_up_cmake.bat  set_up_cmake.sh  set_up_cmake_msvc.bat
doc/: DeveloperGuide.md  InstCovImpl.md  InstCov_Workflow.vsd  Usage.md  Workflow.gv
klee-tests/: convert_all.sh  convert_ktest.sh  export_reports.sh  exportall.sh  runall.sh  runone.sh  test_wrapper
lib/: CMakeLists.txt  DCRecord.cpp  DCRecordBuilder.cpp  DCRecordMgr.cpp  DISlotTree.cpp  DbgInfo.cpp  DbgInfoMgr.cpp  LogMgr.cpp  PBOProblem.cpp  RawRecord.cpp  RawRecordMgr.cpp  RecordItem.cpp  RecordMgr.cpp
runtime/: CMakeLists.txt
scripts/: ccwraper.bat  ccwraper.py  ccwraper.sh  compile_single_file.bat  compile_single_file.py  compile_single_file.sh  cov_scan.bat  cov_scan.py  instcov-view.sh  instcov.bat  instcov.py  instcov.sh  instcov_env  instcov_env.py  instcov_view.bat  instcov_view.py  mcdc-scan.py  mcdc-scan.sh  mcdc_pbo.py  mcdc_scan.py  prep.bat  (+7 more)
tools/instcov/: ASTVisitorDC.cpp  ASTVisitorDC.h  ASTVisitorFunc.cpp  ASTVisitorFunc.h  ASTVisitorSwitch.cpp  ASTVisitorSwitch.h  CMakeLists.txt  CheckLocation.cpp  CheckLocation.h  DIBuilder4Inst.cpp  DIBuilder4Inst.h  DbgInfoMgr.cpp  InstCov.cpp  InstCovASTVisitor.h  InstCovActions.cpp  InstCovActions.h  InstCovInstConditions.cpp  InstCovInstDecisions.cpp  InstDIBuilderDC.cpp  InstDIBuilderDC.h  InstDIBuilderFunc.cpp  InstDIBuilderFunc.h  InstDIBuilderSwitch.cpp  InstDIBuilderSwitch.h
(+135 files in other folders)
